Making the site just a bit wider. I should probably make sure this works on mobile sometime.

--- a/themes/gamerdonkey-theme/static/css/style.css
+++ b/themes/gamerdonkey-theme/static/css/style.css
@@ -3,7 +3,7 @@ body {
    color: lightgray;
    border: solid 1px lightgray;
    margin: 1em auto;
-   max-width: 40em;
+   max-width: 50em;
    padding: 0em 1em 1em 1em;
    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 }
